fix: change repetition marker color in song display component to tertiary for better visibility

--- a/src/app/shared/components/song-display/song-display.component.scss
+++ b/src/app/shared/components/song-display/song-display.component.scss
@@ -64,7 +64,7 @@
     }
 
     &__repetition-marker {
-        color: var(--mat-sys-primary);
+        color: var(--mat-sys-tertiary);
         margin-left: 0.5em;
     }
 }
